--- a/index.html
+++ b/index.html
@@ -99,21 +99,21 @@
 					<div class="col-4">
 						<div>
 							<img src="img/iconos/servicios-icon/educacion.png"/>
-							<h4>Educación para el Desarrollo Sostenible</h4>
+							<h4 class="verde-serv">Educación para el Desarrollo Sostenible</h4>
 							<p class="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore nesciunt, blanditiis, quia beatae quidem repudiandae velit.</p>
 						</div>
 					</div>
 					<div class="col-4">
 						<div>
 							<img src="img/iconos/servicios-icon/mitigacion.png"/>
-							<h4>Educación para el Desarrollo Sostenible</h4>
+							<h4 class="verde-serv">Educación para el Desarrollo Sostenible</h4>
 							<p class="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore nesciunt, blanditiis, quia beatae quidem repudiandae velit.</p>
 						</div>
 					</div>
 					<div class="col-4">
 						<div>
 							<img src="img/iconos/servicios-icon/bienestar.png"/>
-							<h4>Educación para el Desarrollo Sostenible</h4>
+							<h4 class="verde-serv">Educación para el Desarrollo Sostenible</h4>
 							<p class="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore nesciunt, blanditiis, quia beatae quidem repudiandae velit.</p>
 						</div>
 					</div>
@@ -122,21 +122,21 @@
 					<div class="col-4">
 						<div>
 							<img src="img/iconos/servicios-icon/seguridad-icon.png"/>
-							<h4>Educación para el Desarrollo Sostenible</h4>
+							<h4 class="verde-serv">Educación para el Desarrollo Sostenible</h4>
 							<p class="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore nesciunt, blanditiis, quia beatae quidem repudiandae velit.</p>
 						</div>
 					</div>
 					<div class="col-4">
 						<div>
 							<img src="img/iconos/servicios-icon/manejo-de-agua.png"/>
-							<h4>Educación para el Desarrollo Sostenible</h4>
+							<h4 class="verde-serv">Educación para el Desarrollo Sostenible</h4>
 							<p class="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore nesciunt, blanditiis, quia beatae quidem repudiandae velit.</p>
 						</div>
 					</div>
 					<div class="col-4">
 						<div>
 							<img src="img/iconos/servicios-icon/agricultura-icon.png"/>
-							<h4>Educación para el Desarrollo Sostenible</h4>
+							<h4 class="verde-serv">Educación para el Desarrollo Sostenible</h4>
 							<p class="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore nesciunt, blanditiis, quia beatae quidem repudiandae velit.</p>
 						</div>
 					</div>
@@ -148,7 +148,7 @@
 				<div class="row">
 					<h3 class="center white titulo-proyect">Proyectos</h3>
 					<div class="col-6">
-						<img class="img-proyect" src="img/fotos/img-0352.jpg">
+						<img class="img-proyect" src="img/fotos/img-0352.JPG">
 					</div>
 					<div class="col-6">
 						<h4 class="white">Nombre del Proyecto 1</h4>
@@ -222,7 +222,7 @@
 						<div class="col-4">
 							<div class="box-blog-izq">
 								<div class="foto-blog">
-									<img src="img/fotos/img-0400.jpg"/>
+									<img src="img/fotos/img-0400.JPG"/>
 								</div>
 								<div class="align gris">
 									<h4>Título del Post</h4>
@@ -246,7 +246,7 @@
 						<div class="col-4">
 							<div class="box-blog-der">
 								<div class="foto-blog">
-									<img src="img/fotos/img-0400.jpg"/>
+									<img src="img/fotos/img-0400.JPG"/>
 								</div>
 								<div class="align">
 									<h4 class="verde">Título del Post 3</h4>
